--- a/src/pages/images/Image.css
+++ b/src/pages/images/Image.css
@@ -1,10 +1,30 @@
 .image-size {
     padding: 10px;
     width: auto;
-    max-width: 1280px;
-    max-height: 720px;
+    height: auto;
+    max-width: 800px;
+    max-height: 800px;
     background-color: black;
   }
+
+
+.container {
+    display: flex;
+    justify-content: center; /* Center the children horizontally */
+    align-items: center;     /* Center the children vertically */
+    height: 90vh;           /* Full viewport height */
+    position: relative;      /* Establish a positioning context */
+}
+
+
+
+.color-picker {
+    position: absolute; /* Positioning it absolutely */
+    right: 0;           /* Align to the right edge of the container */
+    top: 50%;           /* Align to the vertical center */
+    transform: translateY(-50%); /* Offset the div by half its height */
+}
+
 
 
 .button-row {
